[project]
name = "pyrelease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jens Peder Meldgaard", email = "jenspederm@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pyrelease = "pyrelease:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
