[project]
name = "pyrelease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Peder Meldgaard", email = "jenspederm@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pyrelease = "pyrelease:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "ty>=0.0.4",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrelease"]

[tool.pyrelease]
tag.tag-format = "v{version}"
changelog.commit-format = "- {message} ([{abbr_hash}]({abbr_hash}))"
changelog.changelog-format = "{version} Changes\n=========================\n\n{changes}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    '--log-format="%(asctime)s %(levelname)s %(message)s"',
    '--log-date-format="%Y-%m-%d %H:%M:%S"',
    '--cov-report=term-missing',
    '--cov-report=xml:coverage.xml',
    '--junit-xml=coverage.junit.xml',
    '--cov=pyrelease',
    '--no-cov-on-fail',
    '-ra',
    '-vv',
    '-x',
]

[tool.ruff]
line-length = 88
show-fixes = true
lint.select = [
    "F",    # Pyflakes
    "W",    # pycodestyle
    "E",    # pycodestyle
    "I",    # isort
    "UP",   # pyupgrade
    "PL",   # Pylint
    "T201", # Print Statement
]

[tool.ruff.lint.per-file-ignores]
"{tests,features}/*" = ["T201", "PLR2004", "PLR0915", "PLW1510"]
